--- a/weather.html
+++ b/weather.html
@@ -3,15 +3,25 @@
     <link rel="stylesheet" href="build/css/vendor.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
-    <title>Weather</title>
+    <link rel="stylesheet" href="node_modules/openlayers/dist/ol.css" type="text/css">
+    <style>
+      #map {
+        width: 400px;
+        height: 250px;
+      }
+    </style>
+    <title>Weather Map</title>
   </head>
   <body>
     <div class="container">
       <h1>Get Weather Conditions From Anywhere!</h1>
-      <label for="location">Enter a location:</label>
+      <label for="location">Enter a city name:</label>
       <input id="location" type="text">
-      <button class="btn-success" id="weatherLocation">Get Current Humidity!</button>
-      <div class="showWeather"></div>
+      <button class="btn-success" id="weatherLocation">Get Current conditions</button>
+      <ul>
+        <div class="showWeather">
+        </div>
+      </ul>
     </div>
   </body>
 </html>
