--- a/weather.html
+++ b/weather.html
@@ -1,27 +1,37 @@
 <html>
-  <head>
-    <link rel="stylesheet" href="build/css/vendor.css">
-    <script src="build/js/vendor.min.js"></script>
-    <script type="text/javascript" src="build/js/app.js"></script>
-    <link rel="stylesheet" href="node_modules/openlayers/dist/ol.css" type="text/css">
-    <style>
-      #map {
-        width: 400px;
-        height: 250px;
-      }
-    </style>
-    <title>Weather Map</title>
-  </head>
-  <body>
-    <div class="container">
+<head>
+  <link rel="stylesheet" href="build/css/vendor.css">
+  <script src="build/js/vendor.min.js"></script>
+  <script type="text/javascript" src="build/js/app.js"></script>
+  <link rel="stylesheet" href="node_modules/openlayers/dist/ol.css" type="text/css">
+  <style>
+  #map {
+    width: 400px;
+    height: 250px;
+  }
+  </style>
+  <title>Weather Map</title>
+</head>
+<body>
+  <div class="container">
+    <div class="row">
       <h1>Get Weather Conditions From Anywhere!</h1>
       <label for="location">Enter a city name:</label>
       <input id="location" type="text">
       <button class="btn-success" id="weatherLocation">Get Current conditions</button>
-      <ul>
-        <div class="showWeather">
-        </div>
-      </ul>
     </div>
-  </body>
+    <div class="row">
+      <div class="col-md-5">
+        <ul>
+          <div class="showWeather">
+          </div>
+        </ul>
+      </div>
+      <div class="col-md-6" id="map">
+
+      </div>
+    </div>
+  </div>
+</div>
+</body>
 </html>
