still trying to add map for each search

--- a/weather.html
+++ b/weather.html
@@ -27,8 +27,10 @@
           </div>
         </ul>
       </div>
-      <div class="col-md-6" id="map">
+      <div class="col-md-6">
+        <ul id="map">
 
+        </ul>
       </div>
     </div>
   </div>
